Allocate uninitialized array for u rather than preinitialized

--- a/examples/cfd/01_convection.ipynb
+++ b/examples/cfd/01_convection.ipynb
@@ -105,7 +105,7 @@
     "#NBVAL_IGNORE_OUTPUT\n",
     "\n",
     "# Create field and assign initial conditions\n",
-    "u = ones((nx, ny));\n",
+    "u = Array{Float32}(undef, (nx, ny));\n",
     "init_hat!(u)\n",
     "\n",
     "# Plot initial condition\n",
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "# Repeat initialisation, so we can re-run the cell\n",
-    "u = ones((nx, ny));\n",
+    "u = Array{Float32}(undef, (nx, ny));\n",
     "init_hat!(u)\n",
     "\n",
     "for n in 1:nt\n",
