Using stepping_dim, dimensions and [] interface for defining boundary conditions

--- a/examples/cfd/01_convection.ipynb
+++ b/examples/cfd/01_convection.ipynb
@@ -317,15 +317,14 @@
     "\n",
     "# For defining BCs, we want to explicitly set rows/columns in our field\n",
     "# We can use Devito's \"indexed\" notation to do this:\n",
-    "t, x, y = u.o.dimensions\n",
-    "# # Original example uses:\n",
-    "# x, y = grid.o.dimensions\n",
-    "# t = grid.o.stepping_dim\n",
+    "t = stepping_dim(grid)\n",
+    "y, x = dimensions(grid)\n",
     "\n",
-    "bc_left = Eq(u.o.__getitem__((t + 1, 0, y)), 1.);\n",
-    "bc_right = Eq(u.o.__getitem__((t + 1, nx-1, y)), 1.);\n",
-    "bc_top = Eq(u.o.__getitem__((t + 1, x, ny-1)), 1.);\n",
-    "bc_bottom = Eq(u.o.__getitem__((t + 1, x, 0)), 1.);\n",
+    "# Note that Devito.jl reverses the index order with respect to Devito\n",
+    "bc_left = Eq(u[y, 0, t + 1], 1.);\n",
+    "bc_right = Eq(u[y, nx-1, t + 1], 1.);\n",
+    "bc_top = Eq(u[ny-1, x, t + 1], 1.);\n",
+    "bc_bottom = Eq(u[0, x, t + 1], 1.);\n",
     "\n",
     "# Now combine the BC expressions with the stencil to form operator\n",
     "expressions = (Eq(forward(u), stencil),);\n",
