Use dt,dxl,dyl Julia functions instead of pyobject fields

--- a/examples/cfd/01_convection.ipynb
+++ b/examples/cfd/01_convection.ipynb
@@ -219,7 +219,7 @@
    "source": [
     "# Specify the `interior` flag so that the stencil is only\n",
     "# applied to the interior of the domain.\n",
-    "eq = Eq(u.o.dt + c * u.o.dxl + c * u.o.dyl, subdomain=grid.o.interior)"
+    "eq = Eq(dt(u) + c * dxl(u) + c * dyl(u), subdomain=grid.o.interior)"
    ]
   },
   {
