Text cleanup/corrections

--- a/examples/cfd/01_convection.ipynb
+++ b/examples/cfd/01_convection.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "$$u_{i,j}^{n+1} = u_{i,j}^n-c \\frac{\\Delta t}{\\Delta x}(u_{i,j}^n-u_{i-1,j}^n)-c \\frac{\\Delta t}{\\Delta y}(u_{i,j}^n-u_{i,j-1}^n)$$\n",
     "\n",
-    "Using this, we can start deriving the computational stencil for this equation. Let's first look at the original _pure Python_ implementation of the linear convection flow - but first we import our tools and define some parameters:"
+    "Using this, we can start deriving the computational stencil for this equation. Let's first look at the original _pure Julia_ implementation of the linear convection flow - but first we import our tools and define some parameters:"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "\n",
     "plotly();\n",
     "\n",
-    "# Redirect python outputs to julia so that we can see the outputs of python print calls in PyCall functions\n",
+    "# Redirect python outputs to Julia so that we can see the outputs of python print calls in PyCall functions\n",
     "pyimport(\"sys\").\"stdout\" = PyTextIO(stdout);\n",
     "pyimport(\"sys\").\"stderr\" = PyTextIO(stderr);"
    ]
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can repeat the _direct numerical_ (numpy equivalent) solve from the original tutorial. Note that we skip the derivation of the stencil used to implement our convection equation, as we are going to walk though this process using the Devito API later in this tutorial."
+    "Now we can repeat the _direct Julia_ (numpy equivalent) solve from the original tutorial. Note that we skip the derivation of the stencil used to implement our convection equation, as we are going to walk though this process using the Devito API later in this tutorial."
    ]
   },
   {
@@ -182,7 +182,7 @@
     "#### Devito implementation\n",
     "Now we want to re-create the above example via a Devito operator. To do this, we can start by defining our computational grid and creating a function `u` as a symbolic `devito.TimeFunction`. The core thing to note here is that this is one of Devito's symbolic functions, which have a dual role in the creation of finite difference solvers:\n",
     "* They behave symbolically like `sympy.Function` objects, so that we can construct derivatives and use them in symbolic expressions, thus inheriting all the power of automated symbolic manipulation that SymPy provides.\n",
-    "* They act as containers for user data by providing a `.data` property, accessed via the `Devito.data` function that wraps automatically allocated memory space in a neat NumPy array.\n",
+    "* They act as containers for user data by providing a `.data` property, accessed via the `Devito.data` function that wraps automatically allocated memory space in a neat Julia array.\n",
     "\n",
     "The particular `TimeFunction` type that we will declare our variable $u$ as in this case is aware of the fact that we will want to implement a timestepping algorithm with it. So the object `u` will declare two buffers of shape `(nx, ny)` for us, as defined by the `Grid` object, and present them as `u.data[0]` and `u.data[1]`. Let's fill the initial buffer with some data and look at it:"
    ]
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The careful reader will note that this is equivalent to the symbolic expression for the RHS of the numeric code we showed earlier - only with `dx` and `dy` denoted as `h_x` and `h_y` respectively, while `u(t, x, y)`, `u(t, x - h, y)` and `u(t, x, y - h)` denote the equivalent of $u^{n}_{i, j}$, $u^{n}_{i-1, j}$ and $u^{n}_{i, j-1}$ analytically and `u[1:, 1:]`, `u[:-1, 1:]` and `u[1:, :-1]` in the numpy implementation respectively. \n",
+    "The careful reader will note that this is equivalent to the symbolic expression for the RHS of the numeric code we showed earlier - only with `dx` and `dy` denoted as `h_x` and `h_y` respectively, while `u(t, x, y)`, `u(t, x - h, y)` and `u(t, x, y - h)` denote the equivalent of $u^{n}_{i, j}$, $u^{n}_{i-1, j}$ and $u^{n}_{i, j-1}$ analytically and `u[2:end, 2:end]`, `u[1:end-1, 2:end]` and `u[2:end, 1:end-1]` in the Julia implementation respectively. \n",
     "\n",
     "We can now use this stencil expression to create an operator to apply to our data object:"
    ]
